# example-yuv-websocket-stream

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
res/cam/: wsImageView.html
src/: App.cpp  AppComponent.hpp
src/backend/: ImageWSListener.cpp  ImageWSListener.hpp  Utils.cpp  Utils.hpp  V4LGrabber.cpp  V4LGrabber.hpp
src/controller/: CamAPIController.cpp  CamAPIController.hpp
src/dto/: DTOs.hpp
test/: tests.cpp
utility/: install-oatpp-modules.sh
